<resources>
    <string name="app_name">QuizMaster</string>
    <string name="identificacao_dupla">Dupla: Bernardo Lacerda e Ana Gabriela</string>
    <string name="hint_nome_jogador">Nome do jogador</string>
    <string name="botao_entrar">ENTRAR</string>
    <string name="botao_sair">SAIR</string>
    <string name="mensagem_nome_vazio">Digite seu nome para continuar</string>

    <string name="titulo_configuracao">CONFIGURAR PARTIDA</string>
    <string name="label_materias">MATÉRIAS</string>
    <string name="materia_portugues">Português</string>
    <string name="materia_matematica">Matemática</string>
    <string name="label_quantidade">QUANTIDADE DE QUESTÕES</string>
    <string name="label_tempo">TEMPO POR QUESTÃO</string>
    <string name="simbolo_menos">-</string>
    <string name="simbolo_mais">+</string>
    <string name="formato_segundos">%d segundos</string>
    <string name="botao_jogar">JOGAR</string>
    <string name="mensagem_selecionar_materia">Selecione pelo menos uma matéria</string>
    <string name="mensagem_quantidade_invalida">A quantidade de questões deve ser maior que zero</string>

    <string name="formato_tempo">TEMPO: %1$02d:%2$02d</string>
    <string name="formato_numero_questao">QUESTÃO %1$d DE %2$d</string>
    <string name="botao_confirmar">CONFIRMAR</string>
    <string name="mensagem_selecionar_alternativa">Selecione uma alternativa</string>
    <string name="feedback_acertou">ACERTOU! A resposta correta é %1$s</string>
    <string name="feedback_errou">ERROU! A resposta correta é %1$s</string>

    <string name="titulo_resultado">RESULTADO</string>
    <string name="formato_acertos">Acertos: %d</string>
    <string name="formato_erros">Erros: %d</string>
    <string name="label_desempenho">DESEMPENHO</string>
    <string name="formato_desempenho_materia">%1$s: %2$d de %3$d questões (%4$d%%)</string>
    <string name="botao_jogar_novamente">JOGAR NOVAMENTE</string>
    <string name="botao_config">CONFIG.</string>
    <string name="botao_inicio">INÍCIO</string>

    <string name="nome_canal_notificacao">Resultado do Quiz</string>
    <string name="descricao_canal_notificacao">Notificações sobre o resultado das partidas do QuizMaster</string>
    <string name="titulo_notificacao_resultado">Partida finalizada!</string>
    <string name="formato_notificacao_resultado">Você acertou %1$d de %2$d questões. Toque para jogar novamente.</string>
</resources>